--- a/cv.html
+++ b/cv.html
@@ -7,9 +7,9 @@
     <link rel='icon' href='img/smiley_favicon_rosa.png' type='image/x-icon'/ >
     <title>Luis Caballero - Front End Developer </title>
     <!-- Navbar Script -->
-    <script defer src="js/navbar.js"></script>
+    <!-- <script defer src="js/navbar.js"></script> -->
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/a1006d6154.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/a1006d6154.js" crossorigin="anonymous"></script> -->
 
     <!-- Bootstrap 4 -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
     <body class="bg-pdf">
-        <embed src="pdf/luiscaballero_resume_dev.pdf" type="application/pdf" width="100%" height="2350" />
+        <embed src="pdf/luiscaballero_resume_dev.pdf" type="application/pdf" width="100%" height="100%">
+
     </body>
   </html>
