resume iframe replaced for a direct link to google drive

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
         </div>
         <div class="about-content-photo">
           <img src="img/profile-pic-02.png" alt="profile pic">
-          <a href="cv.html" class="btn-line">Resume<i class='bx bxs-file-pdf text-primary btn-line-icon'></i></a>
+          <a href="https://drive.google.com/file/d/182xQWtvH6LlXKvPGodycM8WOqY5jy0By/view" target="_blank" class="btn-line">Resume<i class='bx bxs-file-pdf text-primary btn-line-icon'></i></a>
         </div>
       </div>
 
