--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="about.html" class="nav-links line-link">About me</a>
         </li>
         <li>
-          <a href="cv.html" target="_blank" class="nav-links line-link">Resume</a>
+          <a href="https://drive.google.com/file/d/182xQWtvH6LlXKvPGodycM8WOqY5jy0By/view" target="_blank" class="nav-links line-link">Resume</a>
         </li>
       </ul>
       <div class="burger">
